maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:48: error: reassignment to val
        setDirection=Direction.NORTH
                    ^ShortestPathMaze:54: error: reassignment to val
        setDirection=Direction.WEST
                    ^ShortestPathMaze:61: error: reassignment to val
          setDirection=Direction.SOUTH
                      ^ShortestPathMaze:69: error: reassignment to val
          setDirection=Direction.EAST
                      ^